syntax = "proto3";

package calculator;

service Calculator {
    rpc HitungPersegi (AddRequest) returns (AddResponse);
    rpc HitungSegitiga (SubRequest) returns (SubResponse);
    rpc HitungPersegiPanjang (MultiplyRequest) returns (stream MultiplyResponse);
    rpc HitungLingkaran (stream Number) returns (AverageResponse);
    rpc Max (stream Number) returns (MaxResponse); // method baru
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 result = 1;
}

message SubRequest {
    int32 a = 1;
    int32 b = 2;
}

message SubResponse {
    int32 result = 1;
}

message MultiplyRequest {
    int32 number = 1;
}

message MultiplyResponse {
    int32 step = 1;
    int32 result = 2;
}

message Number {
    int32 value = 1;
}

message AverageResponse {
    double average = 1;
}

message MaxResponse {
    int32 max = 1;
}
